objects/Customer_Contact__c.object
<CustomObject>
    <description>This custom object will be used to replace the customer distribution list, within Salesforce.</description>
    <fields>
        <fullName>Case_Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Case Siebel ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>This field will show the case to which this customer contact belongs to</description>
        <inlineHelpText>This field will show the case to which this customer contact belongs to</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Contacts</relationshipLabel>
        <relationshipName>Customer_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will show the contact to which this customer contact belongs.</description>
        <inlineHelpText>This field will show the contact to which this customer contact belongs.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Contacts</relationshipLabel>
        <relationshipName>Customer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The email of the customer.</description>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The email of the customer.</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <label>Customer Contact</label>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Customer Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>